<resources>
    <string name="app_name">MyPlant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_header_first">Welcome to <b>PlantApp</b></string>
    <string name="txt_description">Identify more than 3000+ plants and 88% accuracy.</string>
    <string name="btn_get_started">Get Started</string>
    <string name="txt_terms">By tapping next, you are agreeing to PlantID\n<u>Terms of Use</u> &amp; <u>Privacy Policy</u>.</string>

    <string name="onboarding_header_second">Take a photo to identify the plant!</string>
    <string name="onboarding_header_second_bold">identify</string>
    <string name="onboarding_header_third">Get plant care guides</string>
    <string name="onboarding_header_third_bold">care guides</string>
    <string name="onboarding_pager_btn">Continue</string>

    <string name="paywall_header">PlantApp Premium</string>
    <string name="paywall_header_bold">PlantApp</string>
    <string name="paywall_description">All Access Features</string>
    <string name="unlimited">Unlimited</string>
    <string name="plant_identify">Plant Identify</string>
    <string name="faster">Faster</string>
    <string name="process">Process</string>
    <string name="try_for_free">Try free for 3 days</string>
    <string name="payment_bottom">After the 3-day free trial period you’ll be charged ₺274.99 per year unless you cancel before the trial expires. Yearly Subscription is Auto-Renewable</string>
    <string name="payment_links">Terms • Privacy • Restore</string>
    <string name="payment_discount">Save 50%</string>
    <string name="payment_opt1_header">1 Month</string>
    <string name="payment_opt1_desc">$2.99/month, auto renewable</string>
    <string name="payment_opt2_header">1 Year</string>
    <string name="payment_opt2_desc">First 3 days free, then $529,99/year</string>

    <string name="main_welcome">Hi, plant lover!</string>
    <string name="main_morning">Good Afternoon! ⛅</string>
    <string name="searchbar_hint">Search for plants</string>

    <string name="navbar_home">Home</string>
    <string name="navbar_diagnose">Diagnose</string>
    <string name="navbar_garden">My Garden</string>
    <string name="navbar_profile">Profile</string>
    <string name="premium_header">FREE Premium Available</string>
    <string name="premium_desc">Tap to upgrade your account!</string>
</resources>