<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_onboarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/roboto_family"
        android:lineHeight="33dp"
        android:text="@string/onboarding_header_first"
        android:textAlignment="viewStart"
        android:textColor="#13231B"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:lineHeight="22dp"
        android:text="@string/txt_description"
        android:textAlignment="viewStart"
        android:textColor="#13231B"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/onboarding_page_1_bg"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_started"
        app:layout_constraintDimensionRatio="360:670"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/btn_get_started"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/tv_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_background" />

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="232dp"
        android:layout_height="30dp"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/txt_terms"
        android:textColor="#597165B2"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_get_started" />

</androidx.constraintlayout.widget.ConstraintLayout>
