<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_payroll"
        tools:context=".pages.onboarding.paywall.PaywallFragment">

        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="360:465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/bg_paywall" />

        <Button
            android:id="@+id/btnX"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/btn_close"
            android:drawableStart="@drawable/ic_x"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="48dp"
            android:paddingStart="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_paywall_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="276dp"
            android:fontFamily="@font/roboto_family"
            android:layout_marginStart="24dp"
            android:textSize="27sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_paywall_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/paywall_description"
            android:fontFamily="@font/roboto_light"
            android:textSize="17sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/txt_paywall_header"
            app:layout_constraintStart_toStartOf="@id/txt_paywall_header"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_feature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_paywall_description"/>

        <include
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_feature"
            layout="@layout/selectable_button" />

        <include
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button1"
            layout="@layout/selectable_button"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/try_for_free"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button2" />

            <TextView
                android:id="@+id/txt_bottom_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/payment_bottom"
                android:layout_marginHorizontal="24dp"
                android:paddingHorizontal="24dp"
                android:textAlignment="center"
                android:textSize="9sp"
                android:textColor="@color/white70"
                app:layout_constraintTop_toBottomOf="@id/btn_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/txt_links"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_links"
                android:textColor="@color/white70"
                android:textSize="11sp"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintTop_toBottomOf="@id/txt_bottom_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center"
                android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>